# digitally-validate-a-degree

./: .gitignore  Cargo.toml  README.md
crates/shared_utils/: Cargo.toml
crates/shared_utils/src/: lib.rs
src/: add_verification_method.rs  create_did.rs  create_revocation_list.rs  create_verifiable_credentials.rs  holder.rs  issuer.rs  lib.rs  main.rs  utility.rs  utils.rs  verifier.rs
