[package]
name = "digitaly_validate_degree"
version = "1.6.0-beta"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]

identity_iota = { version = "1.5.0", features = ["memstore"] }
anyhow = "1.0.97"

iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.12.0-rc" }
iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = [
    "tls",
    "client",
    "stronghold",
] }

product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "product_common", features = [
    "core-client",
    "transaction",
] }
rand = "0.8.5"
sd-jwt-payload = { version = "0.2.1", default-features = false, features = [
    "sha",
] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0" }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.43", default-features = false, features = [
    "rt",
    "macros",
] }
identity_stronghold = "1.5.1"

[lib]
path = "src/utils.rs"

[[bin]]
name = "issuer"
path = "issuer.rs"

[[bin]]
name = "holder"
path = "holder.rs"

[[bin]]
name = "verifier"
path = "verifier.rs"

