[package]
name = "digitaly_validate_degree"
version = "1.6.0-beta"
authors = ["IOTA Stiftung"]
edition = "2021"
publish = false

[dependencies]
url = "2"
base64-url = "2.0"
josekit = "0.8"
nanoid = "0.4"
base64 = "0.21"

# Core IOTA Identity library with necessary features for client interaction and stronghold storage.
# This single dependency should pull in compatible versions of identity_storage, identity_credential, etc.
anyhow = "1.0.62"

identity_iota = { git = "https://github.com/iotaledger/identity.rs", tag = "v1.6.0-beta.2" }
identity_storage = { git = "https://github.com/iotaledger/identity.rs", package = "identity_storage", tag = "v1.6.0-beta.2", features = [
    "send-sync-storage",
] }
identity_stronghold = { git = "https://github.com/iotaledger/identity.rs", package = "identity_stronghold", tag = "v1.6.0-beta.2", features = [
    "send-sync-storage",
] }
identity-eddsa-verifier = { git = "https://github.com/iotaledger/identity.rs", package = "identity_eddsa_verifier", tag = "v1.6.0-beta.2" }

iota-sdk = { git = "https://github.com/iotaledger/iota.git", package = "iota-sdk", tag = "v0.12.0-rc" }
iota-sdk-legacy = { package = "iota-sdk", version = "1.0", default-features = false, features = [
    "tls",
    "client",
    "stronghold",
] }

product_common = { git = "https://github.com/iotaledger/product-core.git", tag = "v0.2.1", package = "product_common", features = [
    "core-client",
    "transaction",
] }

sd-jwt-payload = { version = "0.2.1", default-features = false, features = [
    "sha",
] }
secret-storage = { git = "https://github.com/iotaledger/secret-storage.git", tag = "v0.3.0" }
serde_json = { version = "1.0", default-features = false }
tokio = { version = "1.43", default-features = false, features = [
    "rt",
    "macros",
] }

shared_utils = { path = "./crates/shared_utils" }
identity_did = "1.5.1"
identity_iota_core = "1.5.1"

[[bin]]
name = "issuer"
path = "src/issuer.rs"

[[bin]]
name = "holder"
path = "src/holder.rs"

[[bin]]
name = "verifier"
path = "src/verifier.rs"
